Set login and register form layout and css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@
 @import url('./buttons.css');
 @import url('./comment.css');
 @import url('./comment-form.css');
+@import url('./form.css');
 @import url('./footer.css');
 
 :root{
