--- a/assets/css/navBar.css
+++ b/assets/css/navBar.css
@@ -11,10 +11,17 @@ nav {
     gap: var(--md-1);
 }
 
-nav a {
+nav a,
+nav button {
     color: var(--neutral-gray);
 }
 
-nav a:hover {
+nav button {
+    font-size: var(--font-size);
+    font-family: var(--font-family);
+}
+
+nav a:hover,
+nav button:hover {
     color: var(--primary-light-blue);
 }
